--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@ body {
   margin: 0 auto;
 }
 
-.todoHeader {
+.todoTitle {
   font-size: 36px;
   line-height: 2;
   font-weight: 800;
@@ -103,3 +103,19 @@ body {
   .todoInputBtn:hover {
     box-shadow: inset 0 0 5px 0 rgba(0,0,0,0.5);
   }
+
+
+.todoHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0 15px 15px;
+  min-height: 62px;
+}
+
+.todoHeaderStats {
+  display: flex;
+  gap: 15px;
+  font-size: 14px;
+  font-weight: 200;
+}
