--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,8 +13,50 @@ body {
   
 }
 
+.root {
+  height: 100%;
+  padding-bottom: 15px;
+}
+
+.pageHeader {
+
+}
+
+.todoBody {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding-right: 15px;
+}
+
+.todoBody::-webkit-scrollbar-track
+{
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+}
+
+.todoBody::-webkit-scrollbar
+{
+  width: 6px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+}
+
+.todoBody::-webkit-scrollbar-thumb
+{
+  background-color: #845EC2;
+  border-radius: 4px;
+}
+
+.todoBody::-webkit-scrollbar-thumb:hover
+{
+  background-color: #845EC2;
+}
+
 .todoApp {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  height: 100%;
   max-width: 800px;
   margin: 0 auto;
 }
@@ -118,4 +160,10 @@ body {
   gap: 15px;
   font-size: 14px;
   font-weight: 200;
+}
+
+.inputNotice {
+  padding: 15px;
+  color: #990000;
+  font-weight: 800;
 }
